Updates with new locales